[package]
name = "tari_conduit"
authors = ["The Tari Development Community"]
description = "The tari miner conduit for xmrig"
repository = "https://github.com/tari-project/tari"
license = "BSD-3-Clause"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = {version = "1.0", default-features = false, features = ["alloc"]}
jsonrpc = "0.11.0"
prost = "0.6"
prost-types = "0.6.1"
sodiumoxide = "0.0.12"
tari_utilities = "^0.1"
curl = "0.4.30"
regex = "1.3.9"
json = "0.12.4"
chrono = "0.4.13"